# Todo_in_C_and_CMAKE

./: Build_help.txt  CMakeLists.txt  run.bat  t.txt
cache/: all_records.txt  second.txt  task.txt
src/: debug.bat  main.c  run.bat
src/App/: App.c  App.h
src/Color/: colordef.h
src/Container/: Container.c  Container.h
src/File_Handle/: fileManger.c  fileManger.h
src/Todo/: todo.c  todo.h
